# schwinn_stationary_bike

./: .coverage 2  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  Workout_History.csv  docker-compose.yml  flask-to-fastapi-conversion-1.md  package-lock.json  package.json  pyproject.toml  read_file.py  requirements.txt
.codex/: config 2.toml
.codex/agents/: docker-runtime-reviewer.toml  test-reviewer.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  security-remediation-agent.yml
app/: __init__.py  app.py  config.py  db.py  logging.py  middleware.py  state.py  web.py
app/bootstrap/: __init__.py  factory.py  metrics.py  testing.py
app/routes/: __init__.py  account.py  admin.py  auth.py  grafana.py  health.py  workouts.py
app/services/: __init__.py  auth.py  avatar.py  email.py  users.py
app/static/: styles.css  workout_charts.js
app/templates/: _header.html  account.html  admin.html  admin_users.html  forgot_password.html  index.html  login.html  register.html  reset_password.html  setup_admin.html  upload_history.html  upload_workout.html  welcome.html  workout_details.html  workout_performance.html
app/workouts/: __init__.py  analytics.py  charts.py  io.py
docs/: c3.mmd  deployment.mmd
docs/architecture/mermaid/: c2-container.mmd  c3-component.mmd  c4-code.mmd
docs/architecture/plantuml/: c2-container.puml  c3-component.puml  c4-code.puml
docs/architecture/structurizr/: workspace.dsl  workspace.json
flask_app/: .dockerignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
flask_app/static/: styles.css
flask_app/templates/: index.html
flask_app/tests/: test_app.py
local_run/: README.md  read_file.py
local_run/read_file/: read_file 2.py  read_file.py
monitoring/grafana/: README.md
monitoring/grafana/dashboards/: schwinn-historical-workouts-api.json  schwinn-http-endpoint-performance.json  schwinn-import-chart-workload.json  schwinn-service-overview.json
scripts/: security_remediation_agent.py
tests/: conftest.py  docker-ui.spec.mjs  test_app.py
