[tool.poetry]
name = "schwinn-dashboard"
version = "0.1.0"
description = "Flask dashboard for Schwinn bike DAT imports and charting"
authors = ["Aaron <aaron@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
flask = "3.1.3"
pandas = "3.0.2"
plotly = "6.7.0"
gunicorn = "25.3.0"
prometheus-client = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
bandit = "^1.9.4"
pip-audit = "^2.10.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
