[project]
name = "schwinn-dashboard"
version = "0.1.0"
description = "Flask dashboard for Schwinn bike DAT imports and charting"
readme = "README.md"
requires-python = ">=3.14,<4.0"
authors = [
    { name = "Aaron", email = "aaron@example.com" },
]
dependencies = [
    "flask==3.1.3",
    "gunicorn==25.3.0",
    "pandas==3.0.2",
    "pillow>=12.2.0",
    "plotly==6.7.0",
    "prometheus-client>=0.25.0,<0.26.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4,<2.0.0",
    "pip-audit>=2.10.0,<3.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
