[project]
name = "schwinn-dashboard"
version = "0.1.0"
description = "FastAPI dashboard for Schwinn bike DAT imports and charting"
readme = "README.md"
requires-python = ">=3.14,<4.0"
authors = [
    { name = "Aaron", email = "aaron@example.com" },
]
dependencies = [
    "fastapi>=0.124.0,<0.137.0",
    "httpx>=0.28.0,<0.29.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pandas==3.0.3",
    "pillow>=12.2.0",
    "plotly==6.7.0",
    "prometheus-client>=0.25.0,<0.26.0",
    "python-multipart>=0.0.20,<0.1.0",
    "uvicorn[standard]>=0.38.0,<0.48.0",
    "werkzeug>=3.1.0,<4.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4,<2.0.0",
    "pip-audit>=2.10.0,<3.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
